--- a/API_Conexao_Android-master/app/src/main/res/values/strings.xml
+++ b/API_Conexao_Android-master/app/src/main/res/values/strings.xml
@@ -32,6 +32,6 @@
 
     <string name="tb_cpf">CPF</string>
     <string name="tb_nome">Nome</string>
-    <string name="tb_sobrenome">Endereço</string>
+    <string name="tb_sobrenome">Sobrenome</string>
 
 </resources>
